fixed all issues in product details service class